# QuietType

./: CHANGELOG.md  PRIVACY.md  README.md  SECURITY.md  keystore.properties.example  settings.gradle.kts
app/: build.gradle.kts  proguard-rules.pro
app/src/androidTest/java/dk/schulz/quiettype/: ExampleInstrumentedTest.kt
app/src/androidTest/java/dk/schulz/voiceme/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/dk/schulz/quiettype/: AppConfig.kt  MainActivity.kt
app/src/main/java/dk/schulz/quiettype/accessibility/: FocusedFieldDetector.kt  FocusedFieldSensitivity.kt  OverlayPlacement.kt  QuietTypeAccessibilityPresentation.kt  QuietTypeAccessibilityService.kt  TextCorrectionDraft.kt  TextInsertionDraft.kt
app/src/main/java/dk/schulz/quiettype/correction/: CorrectionEngine.kt  CorrectionModelCatalog.kt  CorrectionPipeline.kt  DeterministicCorrectionEngine.kt  LlamaModelCorrectionEngine.kt
app/src/main/java/dk/schulz/quiettype/dictation/: DictationInteractionController.kt  (+6 more)
app/src/main/java/dk/schulz/voiceme/: AppConfig.kt  MainActivity.kt
app/src/main/res/drawable/: ic_launcher_foreground.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/dk/schulz/quiettype/: AppConfigTest.kt
app/src/test/java/dk/schulz/voiceme/: AppConfigTest.kt
docs/: ARCHITECTURE.md  PERMISSIONS.md  RELEASE.md  THREAT_MODEL.md  UX_ONBOARDING.md
gradle/: libs.versions.toml
llama-android/: build.gradle.kts
llama-android/src/main/cpp/: CMakeLists.txt  quiettype_llama.cpp
(+72 files in other folders)
